# appjs-2022-workshops-jsi

./: README.md  package.json  react-native-appjs.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/reactnativeappjs/: AppjsModule.java
cpp/: react-native-appjs.cpp  react-native-appjs.h
example/: app.json  package.json
example/ios/: Podfile
example/ios/AppjsExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: Appjs.h  Appjs.mm
ios/Appjs.xcodeproj/: project.pbxproj
src/: index.tsx
